Add security global object and to Category API

--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -19,4 +19,6 @@ components:
     $ref: components/requestBodies.yaml
   schemas:
     $ref: components/schemas.yaml
+  securitySchemes:
+    $ref: components/securitySchemas.yaml
 
