--- a/docs/routes/categories/by-id.yaml
+++ b/docs/routes/categories/by-id.yaml
@@ -1,59 +1,59 @@
 get:
   description: Get category from id
   parameters:
-    - $ref: '#components/parameters.yaml#/id'
+    - $ref: '#components/parameters#/id'
   responses:
     '200':
       description: Category
       content:
         'application/json':
           schema:
-            $ref: '#components/schemas.yaml#/category'
+            $ref: '#components/schemas#/category'
     '404':
-      $ref: '#components/responses.yaml#/404Response'
+      $ref: '#components/responses#/404Response'
     '500':
-      $ref: '#components/responses.yaml#/500Response'
+      $ref: '#components/responses#/500Response'
 
 put:
   description: Update a category
   security:
     - bearerAuth: []
   parameters:
-    - $ref: '#components/parameters.yaml#/id'
+    - $ref: '#components/parameters#/id'
   requestBody:
-    $ref: '#components/requestBodies.yaml#/categoriesBodyRes'
+    $ref: '#components/requestBodies#/categoriesBodyRes'
   responses:
     '200':
       description: Category update
       content:
         'application/json':
           schema:
-            $ref: '#components/schemas.yaml#/category'
+            $ref: '#components/schemas#/category'
     '400':
-      $ref: '#components/responses.yaml#/400Response'
+      $ref: '#components/responses#/400Response'
     '401':
-      $ref: '#components/responses.yaml#/401Response'
+      $ref: '#components/responses#/401Response'
     '404':
-      $ref: '#components/responses.yaml#/404Response'
+      $ref: '#components/responses#/404Response'
     '500':
-      $ref: '#components/responses.yaml#/500Response'
+      $ref: '#components/responses#/500Response'
 
 delete:
   description: Delete a category
   security:
     - bearerAuth: []
   parameters:
-    - $ref: '#components/parameters.yaml#/id'
+    - $ref: '#components/parameters#/id'
   responses:
     '200':
       description: Category update
       content:
         'application/json':
           schema:
-            $ref: '#components/schemas.yaml#/category'
+            $ref: '#components/schemas#/category'
     '401':
-      $ref: '#components/responses.yaml#/401Response'
+      $ref: '#components/responses#/401Response'
     '404':
-      $ref: '#components/responses.yaml#/404Response'
+      $ref: '#components/responses#/404Response'
     '500':
-      $ref: '#components/responses.yaml#/500Response'
+      $ref: '#components/responses#/500Response'
