--- a/docs/routes/timers/self.yaml
+++ b/docs/routes/timers/self.yaml
@@ -11,7 +11,7 @@ get:
           schema:
             oneOf:
               - $ref: '#components/schemas/timer'
-              - null
+              - $ref: '#components/schemas/null'
     '500':
       $ref: '#components/responses/500Response'
 
@@ -36,7 +36,7 @@ put:
           schema:
             oneOf:
               - $ref: '#components/schemas/timer'
-              - null
+              - $ref: '#components/schemas/null'
 
     '500':
       $ref: '#components/responses/500Response'
