Fix refs + Timer con T maiuscola

--- a/docs/components/requestBodies.yaml
+++ b/docs/components/requestBodies.yaml
@@ -3,4 +3,4 @@ categoriesBodyRes:
   content:
     'application/json':
       schema:
-        $ref:  '#components/schemas/Category'
+        $ref: schemas.yaml#/Category
