--- a/docs/routes/index.yaml
+++ b/docs/routes/index.yaml
@@ -2,5 +2,5 @@ get:
   description: Get test
   responses:
     '200':
-      $ref: '#components/responses/200Response'
+      $ref: '../components/responses.yaml#/200Response'
 
