--- a/docs/routes/check-in/check-in.yaml
+++ b/docs/routes/check-in/check-in.yaml
@@ -6,8 +6,8 @@ get:
       content:
         'application/json':
           schema:
-            $ref: '#components/schemas#/timestamp'
+            $ref: '../../components/schemas.yaml#/timestamp'
     '404':
-      $ref: '#components/responses#/404Response'
+      $ref: '../../components/responses.yaml#/404Response'
     '500':
-      $ref: '#components/responses#/500Response'
+      $ref: '../../components/responses.yaml#/500Response'
