Add route Departments Closes #122

--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -26,6 +26,9 @@ paths:
   /timers/{id}:
     $ref: routes/timers/by-id.yaml
 
+  /departments:
+    $ref: routes/departments/index.yaml
+
 
 components:
   responses:
