--- a/docs/routes/login/index.yaml
+++ b/docs/routes/login/index.yaml
@@ -4,6 +4,7 @@ get:
     - bearerAuth: []
   responses:
     '200':
+      description: logged user response
       content:
         'application/json':
           schema:
@@ -28,6 +29,7 @@ post:
               type: string
   responses:
     '200':
+      description: successfully authenticated user
       content:
         'application/json':
           schema:
