Revert "Bugfix/timestamp missing"

--- a/docs/components/requestBodies.yaml
+++ b/docs/components/requestBodies.yaml
@@ -3,11 +3,4 @@ categoriesBodyRes:
   content:
     'application/json':
       schema:
-        $ref: schemas.yaml#/Category
-
-usersBodyRes:
-  description: user body
-  content:
-    'application/json':
-      schema:
-        $ref: schemas.yaml#/User
+        $ref: ./schemas.yaml#/category
