--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/UnitnIS2G29/Backend#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.14"
   }
 }
