--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.14",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "supertest": "^6.0.1"
   }
 }
