--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "dev": "DBURL=mongodb://localhost:27017/is2g29 AUTHKEY=12345678 nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:auth" : "DISABLEAUTH=true DBURL=mongodb://localhost:27017/is2g29 AUTHKEY=12345678 nodemon index.js",
+    "test": "DBURL=mongodb://localhost:27017/is2g29testing_ jest",
+    "test:watch": "DBURL=mongodb://localhost:27017/is2g29testing_ AUTHKEY=12345678 jest --watch --detectOpenHandles"
   },
   "repository": {
     "type": "git",
