--- a/docs/components/requestBodies.yaml
+++ b/docs/components/requestBodies.yaml
@@ -3,4 +3,18 @@ categoriesBodyRes:
   content:
     'application/json':
       schema:
-        $ref: ./schemas.yaml#/category
+        $ref: schemas.yaml#/Category
+
+departmentsBodyRes:
+  description: department body
+  content:
+    'application/json':
+      schema:
+        $ref: schemas.yaml#/Department
+
+usersBodyRes:
+  description: user body
+  content:
+    'application/json':
+      schema:
+        $ref: schemas.yaml#/User
