--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -1,24 +1,71 @@
 openapi: 3.0.0
+
 info:
   version: '1.0'
   title: "Gruppo 29 Unitn IS2"
+
 paths:
   /:
     $ref: routes/index.yaml
+
   /categories:
     $ref: routes/categories/index.yaml
+
   /categories/{id}:
     $ref: routes/categories/by-id.yaml
+  /check-in:
+    $ref: routes/check-in/check-in.yaml
+
+
+  /timers:
+    $ref: routes/timers/index.yaml
+
+  /timers/self:
+    $ref: routes/timers/self.yaml
+
+  /timers/{id}:
+    $ref: routes/timers/by-id.yaml
+
+  /departments:
+    $ref: routes/departments/index.yaml
+
+  /departments/{id}:
+    $ref: routes/departments/by-id.yaml
+
+  /deparments/{id}/employees:
+    $ref: routes/departments/employees/index.yaml
+
+  /login:
+    $ref: routes/login/index.yaml
+
+  /users:
+    $ref: routes/users/index.yaml
+
+  /users/{id}:
+    $ref: routes/users/by-id.yaml
+
+  /requestTimeOff:
+    $ref: routes/requestTimeOff/index.yaml
+
+  /requestTimeOff/{id}:
+    $ref: routes/requestTimeOff/by-id.yaml
+
+  /requestTimeOff/self:
+    $ref: routes/requestTimeOff/self.yaml
 
 components:
   responses:
     $ref: components/responses.yaml
+
   parameters:
     $ref: components/parameters.yaml
+
   requestBodies:
     $ref: components/requestBodies.yaml
+
   schemas:
     $ref: components/schemas.yaml
+
   securitySchemes:
     $ref: components/securitySchemas.yaml
 
