--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -53,6 +53,16 @@ paths:
   /requestTimeOff/self:
     $ref: routes/requestTimeOff/self.yaml
 
+  /shifts/:
+    $ref: routes/shifts/index.yaml
+  
+  /shifts/{id}:
+    $ref: routes/shifts/by-id.yaml
+
+  /shifts/self:
+    $ref: routes/shifts/self.yaml
+
+
 components:
   responses:
     $ref: components/responses.yaml
