API Docs for Projects (Timers / Categories)

--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -13,6 +13,16 @@ paths:
 
   /categories/{id}:
     $ref: routes/categories/by-id.yaml
+
+  /projects:
+    $ref: routes/projects/index.yaml
+
+  /projects/{id}:
+    $ref: routes/projects/by-id.yaml  
+
+  /projects/{id}/timers:
+    $ref: routes/projects/by-id.yaml    
+  
   /check-in:
     $ref: routes/check-in/check-in.yaml
 
