Backend APIs + Implementazione DB

--- a/docs/routes/projects/index.yaml
+++ b/docs/routes/projects/index.yaml
@@ -8,7 +8,7 @@ get:
           schema:
             type: array
             items:
-              $ref: '../../components/schemas.yaml#/Category'
+              $ref: '../../components/schemas.yaml#/CategoryWithTime'
     '404':
       $ref: '../../components/responses.yaml#/404Response'
     '500':
