--- a/docs/routes/authentications/index.yaml
+++ b/docs/routes/authentications/index.yaml
@@ -41,6 +41,20 @@ post:
     '404':
         $ref: '../../components/responses.yaml#/404Response'
 
-
-
+delete:
+  description: Remove authentication to a user
+  security:
+    - bearerAuth: []
+  responses:
+    '200':
+      description: Loggedout user response
+      content:
+        'text/plain':
+          example: 'Ok'
+    '400':
+        $ref: '../../components/responses.yaml#/400Response'
+    '401':
+        $ref: '../../components/responses.yaml#/401Response'
+    '404':
+        $ref: '../../components/responses.yaml#/404Response'
 
