--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "doc": "docs"
   },
   "scripts": {
-    "dev": "DBURL=mongodb://localhost:27017/is2g29 AUTHKEY=12345678 nodemon index.js",
+    "dev": "DBURL=mongodb://mongo:27017/is2g29 AUTHKEY=12345678 nodemon index.js",
     "dev:auth": "DISABLEAUTH=true DBURL=mongodb://localhost:27017/is2g29 AUTHKEY=12345678 nodemon index.js",
-    "test": "DBURL=mongodb://localhost:27017/is2g29testing_ AUTHKEY=12345678 jest --detectOpenHandles ",
-    "test:watch": "DBURL=mongodb://localhost:27017/is2g29testing_ AUTHKEY=12345678 jest --watch --detectOpenHandles"
+    "test": "DBURL=mongodb://mongo:27017/is2g29testing_ AUTHKEY=12345678 jest --detectOpenHandles --passWithNoTests",
+    "test:watch": "DBURL=mongodb://mongo:27017/is2g29testing_ AUTHKEY=12345678 jest --watch --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -26,11 +26,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "nodemon":"^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.14",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6",
+    "npm": "^7.0.15"
   },
   "devDependencies": {
     "jest": "^26.6.3",
