Add installation of supertest

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
 install:
   npm install -g swagger-cli
   npm install -g jest
+  npm install -g supertest
 script:
   # validate apis
   - echo "Validating $PATH_TO_VALIDATE/API_PATH:"
