Set test to run in band

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ script:
 
   # run node tests
   - NODE_ENV=development npm install
-  - DBURL=mongodb://mongo_test:27017/is2g29testing_ AUTHKEY=12345678 jest --detectOpenHandles
+  - DBURL=mongodb://mongo_test:27017/is2g29testing_ AUTHKEY=12345678 jest --detectOpenHandles --runInBand
 
